--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
+    "seed": "node seeds/movies.seed.js",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "hbs": "^4.1.1",
+    "hbs": "^4.2.0",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
